llvm/dev/boolcall1.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/boolcall1.llvm:10:1: error: expected instruction opcode
}
^
